[package]
name = "plotsirv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.1.6", features = ["derive"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

valence = { path = "../valence/crates/valence" }
valence_protocol = { path = "../valence/crates/valence_protocol" }
